tests/NormalTests/paczka2/big_fuzzy/47335467.err
Error in line 4: SDjd6 S236 7,3
Error in line 6: uuySOXB S236 41,3
Error in line 5: SDjd6 A663 57,0
Error in line 15: uuySOXB A150 80,5
Error in line 10: A663 S236 96,0
Error in line 25: A663 A663 97,9
Error in line 42: Auu3 Auu3 2,8
Error in line 50: uuySOXB A150 83,5
Error in line 67: oiZH2rbBgR S236 46,7
Error in line 88: CxSPUaxu3rj A150 46,8
Error in line 89: A663 S236 4,1
Error in line 86: SDjd6 A663 1,5
Error in line 96: A663 A102 44,1
Error in line 99: A663 S236 58,4
Error in line 97: SDjd6 A150 3,6
Error in line 105: SDjd6 A102 85,8
Error in line 108: uuySOXB A102 311,4
Error in line 106: SDjd6 A663 71,1
Error in line 110: uuySOXB A663 85,8
Error in line 122: dnLu72cE S236 19,9
Error in line 103: A663 A102 26,6
Error in line 121: Pl51 A150 226,0
Error in line 129: Pl51 A663 105,18
Error in line 124: A663 A150 97,9
Error in line 136: A663 A663 58,4
Error in line 133: SDjd6 A663 95,4
Error in line 127: Pl51 A663 33,8
Error in line 150: Pl51 A102 45,8
Error in line 154: Pl51 A150 51,3
Error in line 160: oiZH2rbBgR S236 74,8
Error in line 162: dnLu72cE S236 64,9
Error in line 172: SDjd6 A663 200,2
Error in line 191: CxSPUaxu3rj A663 96,9
Error in line 184: A663 A663 39,7
Error in line 192: CxSPUaxu3rj A102 88,0
Error in line 202: SDjd6 A663 94,9
Error in line 206: uuySOXB A150 487,4
Error in line 204: SDjd6 S236 81,3
Error in line 218: A663 A102 12,8
Error in line 234: oiZH2rbBgR A102 43,2
Error in line 237: uuySOXB S236 32,4
Error in line 242: uuySOXB A102 2,5
Error in line 240: oiZH2rbBgR A150 33,1
Error in line 249: SDjd6 A150 B1,3
Error in line 248: oiZH2rbBgR S236 12,7
